SUBDIRS = man pix doc src scripts templates olpc desktop windows tests shutdown usfm kjv xetex git php po
INTLTOOL_FILES = intltool-extract.in \
		 intltool-merge.in \
		 intltool-update.in
EXTRA_DIST = TODO FDL INTLTOOL_FILES
CLEANFILES = bibledit*.gz *~
DISTCLEANFILES = intltool-extract \
		 intltool-merge \
		 intltool-update \
		 po/.intltool-merge-cache
ACLOCAL_AMFLAGS = -I m4
