noinst_LIBRARIES = libbibledit.a

libbibledit_a_SOURCES = \
	library/bibledit.cpp \
	library/locks.c \
	webserver/webserver.cpp \
	webserver/http.cpp \
	webserver/request.cpp \
	webserver/io.c \
	bootstrap/bootstrap.cpp \
	filter/url.cpp \
	filter/string.cpp \
	filter/roles.cpp \
	filter/md5.cpp \
	filter/usfm.cpp \
	filter/archive.cpp \
	filter/text.cpp \
	filter/passage.cpp \
	filter/css.cpp \
	filter/git.cpp \
	filter/diff.cpp \
	filter/abbreviations.cpp \
	filter/shell.cpp \
	filter/merge.cpp \
	filter/date.cpp \
	flate/flate.cpp \
	assets/view.cpp \
	assets/page.cpp \
	assets/header.cpp \
	index/index.cpp \
	index/listing.cpp \
	config/globals.cpp \
	menu/logic.cpp \
	menu/index.cpp \
	locale/translate.cpp \
	locale/logic.cpp \
	database/config/general.cpp \
	database/config/bible.cpp \
	database/config/user.cpp \
	database/users.cpp \
	database/logs.cpp \
	database/sqlite.cpp \
	database/styles.cpp \
	database/bibles.cpp \
	database/books.cpp \
	database/bibleactions.cpp \
	database/check.cpp \
	database/localization.cpp \
	database/confirm.cpp \
	database/ipc.cpp \
	database/jobs.cpp \
	database/kjv.cpp \
	database/oshb.cpp \
	database/sblgnt.cpp \
	database/sprint.cpp \
	database/mail.cpp \
	database/navigation.cpp \
	database/usfmresources.cpp \
	database/mappings.cpp \
	database/noteactions.cpp \
	database/versifications.cpp \
	database/modifications.cpp \
	database/notes.cpp \
	database/volatile.cpp \
	database/maintenance.cpp \
	database/imageresources.cpp \
	database/state.cpp \
	database/noteassignment.cpp \
	database/strong.cpp \
	database/morphgnt.cpp \
	database/etcbc4.cpp \
	database/hebrewlexicon.cpp \
	database/cache.cpp \
	database/login.cpp \
	database/privileges.cpp \
	database/git.cpp \
	database/userresources.cpp \
	session/logic.cpp \
	session/login.cpp \
	session/logout.cpp \
	session/password.cpp \
	session/signup.cpp \
	session/switch.cpp \
	parsewebdata/ParseMultipartFormData.cpp \
	parsewebdata/ParseWebData.cpp \
	setup/index.cpp \
	setup/logic.cpp \
	journal/index.cpp \
	journal/logic.cpp \
	styles/logic.cpp \
	styles/indext.cpp \
	styles/indexm.cpp \
	styles/sheetm.cpp \
	styles/view.cpp \
	styles/css.cpp \
	styles/sheets.cpp \
	text/text.cpp \
	esword/text.cpp \
	onlinebible/text.cpp \
	html/text.cpp \
	html/header.cpp \
	odf/text.cpp \
	timer/index.cpp \
	tasks/logic.cpp \
	tasks/run.cpp \
	config/logic.cpp \
	bible/logic.cpp \
	bible/manage.cpp \
	bible/settings.cpp \
	bible/book.cpp \
	bible/chapter.cpp \
	bible/import_run.cpp \
	bible/import.cpp \
	bible/abbreviations.cpp \
	bible/order.cpp \
	bible/css.cpp \
	bible/editing.cpp \
	notes/logic.cpp \
	notes/actions.cpp \
	notes/clean.cpp \
	notes/note.cpp \
	notes/status-1.cpp \
	notes/assign-1.cpp \
	notes/cleancli.cpp \
	notes/notes.cpp \
	notes/status-n.cpp \
	notes/assign-n.cpp \
	notes/click.cpp \
	notes/poll.cpp \
	notes/summary.cpp \
	notes/bible-1.cpp \
	notes/comment.cpp \
	notes/select.cpp \
	notes/unassign-n.cpp \
	notes/bible-n.cpp \
	notes/create.cpp \
	notes/severity-1.cpp \
	notes/verses.cpp \
	notes/bulk.cpp \
	notes/edit.cpp \
	notes/index.cpp \
	notes/severity-n.cpp \
	trash/handler.cpp \
	help/index.cpp \
	confirm/worker.cpp \
	email/index.cpp \
	email/send.cpp \
	email/receive.cpp \
	user/notifications.cpp \
	user/account.cpp \
	user/logic.cpp \
	manage/index.cpp \
	manage/users.cpp \
	manage/exports.cpp \
	manage/hyphenation.cpp \
	manage/hyphenate.cpp \
	manage/write.cpp \
	manage/privileges.cpp \
	administration/language.cpp \
	administration/timezone.cpp \
	collaboration/index.cpp \
	collaboration/url.cpp \
	collaboration/link.cpp \
	collaboration/direction.cpp \
	search/rebibles.cpp \
	search/renotes.cpp \
	access/user.cpp \
	access/bible.cpp \
	access/logic.cpp \
	dialog/entry.cpp \
	dialog/list.cpp \
	dialog/yes.cpp \
	dialog/color.cpp \
	dialog/books.cpp \
	dialog/upload.cpp \
	fonts/logic.cpp \
	versification/index.cpp \
	versification/system.cpp \
	versification/logic.cpp \
	book/create.cpp \
	compare/index.cpp \
	compare/compare.cpp \
	jobs/index.cpp \
	editverse/index.cpp \
	editverse/load.cpp \
	editverse/save.cpp \
	editone/index.cpp \
	editone/load.cpp \
	editone/save.cpp \
	editone/verse.cpp \
	navigation/passage.cpp \
	navigation/update.cpp \
	navigation/poll.cpp \
	ipc/focus.cpp \
	ipc/notes.cpp \
	checksum/logic.cpp \
	editusfm/focus.cpp \
	editusfm/index.cpp \
	editusfm/load.cpp \
	editusfm/offset.cpp \
	editusfm/save.cpp \
	editor/styles.cpp \
	editor/html2usfm.cpp \
	editor/usfm2html.cpp \
	editor/select.cpp \
	edit/edit.cpp \
	edit/focus.cpp \
	edit/id.cpp \
	edit/index.cpp \
	edit/load.cpp \
	edit/offset.cpp \
	edit/save.cpp \
	edit/styles.cpp \
	edit/logic.cpp \
	search/all.cpp \
	search/index.cpp \
	search/replace.cpp \
	search/getids.cpp \
	search/replacepre.cpp \
	search/replacego.cpp \
	search/search2.cpp \
	search/replace2.cpp \
	search/replacepre2.cpp \
	search/getids2.cpp \
	search/replacego2.cpp \
	search/similar.cpp \
	search/strongs.cpp \
	search/strong.cpp \
	search/originals.cpp \
	tmp/tmp.cpp \
	workbench/index.cpp \
	workbench/logic.cpp \
	workbench/settings.cpp \
	workbench/organize.cpp \
	sendreceive/logic.cpp \
	sendreceive/index.cpp \
	sendreceive/sendreceive.cpp \
	sendreceive/settings.cpp \
	sendreceive/bibles.cpp \
	sendreceive/notes.cpp \
	sendreceive/changes.cpp \
	sendreceive/files.cpp \
	sendreceive/resources.cpp \
	demo/logic.cpp \
	client/index.cpp \
	client/logic.cpp \
	sync/logic.cpp \
	sync/setup.cpp \
	sync/settings.cpp \
	sync/bibles.cpp \
	sync/usfmresources.cpp \
	sync/notes.cpp \
	sync/changes.cpp \
	sync/files.cpp \
	sync/resources.cpp \
	sync/mail.cpp \
	resource/index.cpp \
	resource/organize.cpp \
	resource/logic.cpp \
	resource/get.cpp \
	resource/external.cpp \
	resource/bible2resource.cpp \
	resource/convert2resource.cpp \
	resource/convert2bible.cpp \
	resource/manage.cpp \
	resource/print.cpp \
	resource/download.cpp \
	resource/images.cpp \
	resource/image.cpp \
	resource/img.cpp \
	resource/imagefetch.cpp \
	resource/sword.cpp \
	resource/select.cpp \
	resource/cache.cpp \
	resource/user9edit.cpp \
	resource/user1edit.cpp \
	resource/user9view.cpp \
	resource/user1view.cpp \
	json/json.c \
	jsonxx/jsonxx.cpp \
	mapping/index.cpp \
	mapping/map.cpp \
	statistics/statistics.cpp \
	changes/change.cpp \
	changes/changes.cpp \
	changes/logic.cpp \
	changes/manage.cpp \
	changes/modifications.cpp \
	sprint/burndown.cpp \
	sprint/index.cpp \
	checks/run.cpp \
	checks/headers.cpp \
	checks/index.cpp \
	checks/logic.cpp \
	checks/sentences.cpp \
	checks/settings.cpp \
	checks/settingspatterns.cpp \
	checks/settingssentences.cpp \
	checks/space.cpp \
	checks/suppress.cpp \
	checks/usfm.cpp \
	checks/verses.cpp \
	checks/versification.cpp \
	consistency/index.cpp \
	consistency/input.cpp \
	consistency/logic.cpp \
	consistency/poll.cpp \
	export/esword.cpp \
	export/html.cpp \
	export/index.cpp \
	export/info.cpp \
	export/logic.cpp \
	export/odt.cpp \
	export/onlinebible.cpp \
	export/textusfm.cpp \
	export/usfm.cpp \
	export/web.cpp \
	export/bibledropbox.cpp \
	export/quickbible.cpp \
	xrefs/clear.cpp \
	xrefs/extract.cpp \
	xrefs/help.cpp \
	xrefs/index.cpp \
	xrefs/insert.cpp \
	xrefs/interpret.cpp \
	xrefs/move.cpp \
	xrefs/next.cpp \
	xrefs/source.cpp \
	xrefs/target.cpp \
	xrefs/translate.cpp \
	webbible/search.cpp \
	debug/index.cpp \
	debug/logic.cpp \
	paratext/logic.cpp \
	paratext/index.cpp \
	personalize/index.cpp \
	lexicon/logic.cpp \
	lexicon/definition.cpp \
	sources/etcbc4.cpp \
	sources/kjv.cpp \
	sources/morphhb.cpp \
	sources/morphgnt.cpp \
	sources/hebrewlexicon.cpp \
	sources/oshb.cpp \
	sword/logic.cpp \
	pugixml/pugixml.cpp \
	pugixml/utils.cpp \
	public/index.cpp \
	public/logic.cpp \
	public/login.cpp \
	public/chapter.cpp \
	public/notes.cpp \
	public/new.cpp \
	public/create.cpp \
	public/note.cpp \
	public/comment.cpp \
	utf8proc/utf8proc.c \
	search/logic.cpp \
	basic/index.cpp \
	mbedtls/aes.c \
	mbedtls/aesni.c \
	mbedtls/arc4.c \
	mbedtls/asn1parse.c \
	mbedtls/asn1write.c \
	mbedtls/base64.c \
	mbedtls/bignum.c \
	mbedtls/blowfish.c \
	mbedtls/camellia.c \
	mbedtls/ccm.c \
	mbedtls/certs.c \
	mbedtls/cipher.c \
	mbedtls/cipher_wrap.c \
	mbedtls/ctr_drbg.c \
	mbedtls/debug.c \
	mbedtls/des.c \
	mbedtls/dhm.c \
	mbedtls/ecdh.c \
	mbedtls/ecdsa.c \
	mbedtls/ecjpake.c \
	mbedtls/ecp.c \
	mbedtls/ecp_curves.c \
	mbedtls/entropy.c \
	mbedtls/entropy_poll.c \
	mbedtls/error.c \
	mbedtls/gcm.c \
	mbedtls/havege.c \
	mbedtls/hmac_drbg.c \
	mbedtls/md.c \
	mbedtls/md2.c \
	mbedtls/md4.c \
	mbedtls/md5.c \
	mbedtls/md_wrap.c \
	mbedtls/memory_buffer_alloc.c \
	mbedtls/net.c \
	mbedtls/oid.c \
	mbedtls/padlock.c \
	mbedtls/pem.c \
	mbedtls/pk.c \
	mbedtls/pk_wrap.c \
	mbedtls/pkcs11.c \
	mbedtls/pkcs12.c \
	mbedtls/pkcs5.c \
	mbedtls/pkparse.c \
	mbedtls/pkwrite.c \
	mbedtls/platform.c \
	mbedtls/ripemd160.c \
	mbedtls/rsa.c \
	mbedtls/sha1.c \
	mbedtls/sha256.c \
	mbedtls/sha512.c \
	mbedtls/ssl_cache.c \
	mbedtls/ssl_ciphersuites.c \
	mbedtls/ssl_cli.c \
	mbedtls/ssl_cookie.c \
	mbedtls/ssl_srv.c \
	mbedtls/ssl_ticket.c \
	mbedtls/ssl_tls.c \
	mbedtls/threading.c \
	mbedtls/timing.c \
	mbedtls/version.c \
	mbedtls/version_features.c \
	mbedtls/x509.c \
	mbedtls/x509_create.c \
	mbedtls/x509_crl.c \
	mbedtls/x509_crt.c \
	mbedtls/x509_csr.c \
	mbedtls/x509write_crt.c \
	mbedtls/x509write_csr.c \
	mbedtls/xtea.c

bin_PROGRAMS = server unittest generate

server_SOURCES = executable/bibledit.cpp

server_LDADD = libbibledit.a

unittest_SOURCES = \
	unittests/unittest.cpp \
	unittests/utilities.cpp \
	unittests/libraries.cpp \
	unittests/filters.cpp \
	unittests/databases.cpp

unittest_LDADD = libbibledit.a

generate_SOURCES = executable/generate.cpp

generate_LDADD = libbibledit.a

AM_CFLAGS = -Wall -Wextra -pedantic -g
AM_CFLAGS += $(OPENSSL_CFLAGS)

AM_CXXFLAGS = -Wall -Wextra -pedantic -std=c++11 -fno-var-tracking -g
AM_CXXFLAGS += $(SQLITE_CFLAGS)
AM_CXXFLAGS += $(CURL_CFLAGS)
AM_CXXFLAGS += $(OPENSSL_CFLAGS)
AM_CXXFLAGS += $(SWORD_CFLAGS)

LIBS = -Wall -lpthread -L. -g -rdynamic
LIBS += $(SQLITE_LIBS)
LIBS += $(CURL_LIBS)
LIBS += $(OPENSSL_LIBS)
LIBS += $(SWORD_LIBS)

EXTRA_DIST = a* basic bible bibledit bibles book bootstrap c* d* D* e* f* g* h* i* j* l* m* n* o* p* r* s* t* u* v* w* x*

dist-hook:
	rm -rf `find $(distdir) -name *.o`
	rm -rf `find $(distdir) -name *.a`
	rm -rf `find $(distdir) -name autom4te.cache`
	rm -f $(distdir)/server
	rm -f $(distdir)/unittest
	rm -rf `find $(distdir) -name .dirstamp`
	rm -rf `find $(distdir) -name .deps`

CLEANFILES = bibledit*.gz *~
